--- a/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarAuthorized.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarAuthorized.cshtml
@@ -33,6 +33,8 @@
 
 					<partial name="/Pages/Features/Common/PartialViews/_Navbar.cshtml" />
 
+					<partial name="/Pages/Features/Identity/PartialViews/_NavbarAdmin.cshtml" />
+
 					<partial name="/Pages/Features/Cms/PartialViews/_Navbar.cshtml" />
 
 				</ul>
