--- a/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
@@ -7,6 +7,12 @@
 	<ul class="dropdown-menu mt-0">
 
 		<li>
+			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Posts/Index">
+				@(Resources.DataDictionary.Posts)
+			</a>
+		</li>
+
+		<li>
 			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Pages/Index">
 				@(Resources.DataDictionary.Pages)
 			</a>
