--- a/src/Server/Pages/Features/Cms/Admin/Posts/Create.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/Posts/Create.cshtml
@@ -52,6 +52,8 @@
 
 			<dtat-full-input asp-for="ViewModel.Hits" />
 
+			<dtat-full-input asp-for="ViewModel.Score" />
+
 			<dtat-full-input asp-for="ViewModel.Ordering" />
 		</fieldset>
 
