--- a/src/Server/Pages/Features/Cms/Admin/Posts/Update.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/Posts/Update.cshtml
@@ -54,6 +54,8 @@
 
 			<dtat-full-input asp-for="ViewModel.Hits" />
 
+			<dtat-full-input asp-for="ViewModel.Score" />
+
 			<dtat-full-input asp-for="ViewModel.Ordering" />
 		</fieldset>
 
