--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Update.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Update.cshtml
@@ -26,6 +26,8 @@
 
 			<dtat-full-input asp-for="ViewModel.Ordering" />
 
+			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
+
 			<dtat-full-textarea asp-for="ViewModel.Description" />
 		</fieldset>
 
