--- a/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarDynamic.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarDynamic.cshtml
@@ -48,7 +48,7 @@
 						{
 							<li class="nav-item">
 								<a class="nav-link disabled">
-									@(menuItem.Title)
+									@(Html.Raw(value: menuItem.Title))
 								</a>
 							</li>
 
@@ -65,7 +65,7 @@
 
 							<li class="nav-item">
 								<a href="@(menuItem.NavigationUrl)" class="nav-link" target="@(target)">
-									@(menuItem.Title)
+									@(Html.Raw(value: menuItem.Title))
 								</a>
 							</li>
 
@@ -75,7 +75,7 @@
 						<li class="nav-item dropdown">
 
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								@(menuItem.Title)
+								@(Html.Raw(value: menuItem.Title))
 							</a>
 
 							<ul class="dropdown-menu mt-0">
@@ -106,7 +106,7 @@
 										{
 											<li>
 												<a class="dropdown-item disabled">
-													@(subMenuItem.Title)
+													@(Html.Raw(value: subMenuItem.Title))
 												</a>
 											</li>
 
@@ -121,7 +121,7 @@
 
 										<li>
 											<a href="@(subMenuItem.NavigationUrl)" class="dropdown-item" target="@(target)">
-												@(subMenuItem.Title)
+												@(Html.Raw(value: subMenuItem.Title))
 											</a>
 										</li>
 									}
