--- a/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
@@ -7,12 +7,6 @@
 	<ul class="dropdown-menu mt-0">
 
 		<li>
-			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Posts/Index">
-				@(Resources.DataDictionary.Posts)
-			</a>
-		</li>
-
-		<li>
 			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Pages/Index">
 				@(Resources.DataDictionary.Pages)
 			</a>
@@ -33,6 +27,14 @@
 		<li>
 			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Layouts/Index">
 				@(Resources.DataDictionary.Layouts)
+			</a>
+		</li>
+
+		<li><hr class="dropdown-divider" /></li>
+
+		<li>
+			<a class="dropdown-item" asp-page="/Features/Cms/Admin/Posts/Index">
+				@(Resources.DataDictionary.Posts)
 			</a>
 		</li>
 
