--- a/src/Server/Pages/Features/Identity/PartialViews/_NavbarAdmin.cshtml
+++ b/src/Server/Pages/Features/Identity/PartialViews/_NavbarAdmin.cshtml
@@ -35,6 +35,12 @@
 			</a>
 		</li>
 
+		<li>
+			<a class="dropdown-item" asp-page="/Features/Identity/Admin/Genders/Index">
+				@(Resources.DataDictionary.Genders)
+			</a>
+		</li>
+
 	</ul>
 
 </li>
