--- a/src/Server/Pages/Index.cshtml
+++ b/src/Server/Pages/Index.cshtml
@@ -11,7 +11,9 @@
 		"Layouts/_HomePage";
 }
 
-<h3>
+<partial name="Features/Cms/PartialViews/_DisplayPostsInHomePage" />
+
+@*<h3>
 	@(pageTitle)
 </h3>
 
@@ -30,3 +32,4 @@
 </div>
 
 <hr />
+*@
