--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Update.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Update.cshtml
@@ -22,13 +22,19 @@
 
 			<dtat-full-checkbox asp-for="ViewModel.IsActive" />
 
-			<dtat-full-input asp-for="ViewModel.Name" />
-
 			<dtat-full-input asp-for="ViewModel.Ordering" />
+
+			<dtat-full-input asp-for="ViewModel.Name" dir="ltr" />
+
+			<dtat-full-input asp-for="ViewModel.Title" />
+
+			<dtat-full-textarea asp-for="ViewModel.Description" />
 
 			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
-			<dtat-full-textarea asp-for="ViewModel.Description" />
+			<dtat-full-input asp-for="ViewModel.MaxDisplayPostCount" />
+
+			<dtat-full-input asp-for="ViewModel.Hits" />
 		</fieldset>
 
 		<section-form-buttons>
