--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
@@ -26,13 +26,15 @@
 
 			<dtat-full-input asp-for="ViewModel.Title" />
 
-			<dtat-full-textarea asp-for="ViewModel.Description" />
+			<dtat-full-input asp-for="ViewModel.Description" />
 
 			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
 			<dtat-full-input asp-for="ViewModel.MaxDisplayPostCount" />
 
 			<dtat-full-input asp-for="ViewModel.Hits" />
+
+			<dtat-full-textarea asp-for="ViewModel.Body" />
 		</fieldset>
 
 		<section-form-buttons>
