--- a/src/Server/Pages/Errors/Error403.cshtml
+++ b/src/Server/Pages/Errors/Error403.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 
-@model Server.Pages.Errors.ErrorModel
+@model Server.Pages.Errors.Error403Model
 
 @{
 	var pageTitle =
-		Resources.PageTitles.UnexpectedError;
+		Resources.PageTitles.Error403;
 
 	ViewData[Constants.ViewDataKeyName.PageTitle] = pageTitle;
 }
