--- a/src/Server/Pages/Errors/Error500.cshtml
+++ b/src/Server/Pages/Errors/Error500.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+
 @model Server.Pages.Errors.Error500Model
 
 @{
@@ -8,8 +9,8 @@
 	ViewData[Constants.ViewDataKeyName.PageTitle] = pageTitle;
 }
 
-<h3>
+<h1 class="text-center">
 	@(pageTitle)
-</h3>
+</h1>
 
 <hr />
