--- a/src/Server/Pages/Features/Identity/PartialViews/_NavbarAdmin.cshtml
+++ b/src/Server/Pages/Features/Identity/PartialViews/_NavbarAdmin.cshtml
@@ -30,6 +30,12 @@
 	<ul class="dropdown-menu mt-0">
 
 		<li>
+			<a class="dropdown-item" asp-page="/Features/Identity/Admin/Users/Index">
+				@(Resources.DataDictionary.Users)
+			</a>
+		</li>
+
+		<li>
 			<a class="dropdown-item" asp-page="/Features/Identity/Admin/Roles/Index">
 				@(Resources.DataDictionary.Roles)
 			</a>
