--- a/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
@@ -44,6 +44,20 @@
 			</a>
 		</li>
 
+		<li><hr class="dropdown-divider" /></li>
+
+		<li>
+			<a href="~/CreateTestData" class="dropdown-item">
+				@(Resources.DataDictionary.CreateTestData)
+			</a>
+		</li>
+
+		<li>
+			<a href="~/DeleteTestData" class="dropdown-item">
+				@(Resources.DataDictionary.DeleteTestData)
+			</a>
+		</li>
+
 	</ul>
 
 </li>
