--- a/src/Server/Pages/Features/Identity/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Identity/PartialViews/_Navbar.cshtml
@@ -30,6 +30,12 @@
 	<ul class="dropdown-menu mt-0">
 
 		<li>
+			<a class="dropdown-item" asp-page="/Account/ChangePassword">
+				@(Resources.PageTitles.ChangePassword)
+			</a>
+		</li>
+
+		<li>
 			<a class="dropdown-item" asp-page="/Account/UpdateProfile">
 				@(Resources.DataDictionary.UpdateProfile)
 			</a>
