--- a/src/Server/Pages/Features/Identity/Profile.cshtml
+++ b/src/Server/Pages/Features/Identity/Profile.cshtml
@@ -21,11 +21,17 @@
 
 		<dtat-readonly-input asp-for="ViewModel.LastName" />
 
+		<dtat-readonly-input asp-for="ViewModel.RoleTitle" />
+
 		<dtat-readonly-input asp-for="ViewModel.CellPhoneNumber" dir="ltr" />
 
 		<dtat-readonly-input asp-for="ViewModel.EmailAddress" dir="ltr" />
 
 		<dtat-readonly-input asp-for="ViewModel.Hits" dir="ltr" />
+
+		<dtat-readonly-input asp-for="ViewModel.InsertDateTime" />
+
+		<dtat-readonly-input asp-for="ViewModel.UpdateDateTime" />
 
 		<hr />
 
