--- a/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarMain.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarMain.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Infrastructure.Settings.ApplicationSettings applicationSettings
+﻿@inject Services.Features.Common.LocalizedApplicationSettingService localizedApplicationSettingService
 
 @{
 	var isUserAuthenticated = true;
@@ -9,6 +9,10 @@
 	{
 		isUserAuthenticated = false;
 	}
+
+	var localizedApplicationSetting =
+		await
+		localizedApplicationSettingService.GetInstance();
 }
 
 <header>
@@ -17,9 +21,38 @@
 
 		<div class="container">
 
-			<a class="navbar-brand" asp-page="/Index">
-				@(Resources.DataDictionary.SiteTitle)
-			</a>
+			@{
+				if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText) &&
+				string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
+				{
+					// که هیچی
+				}
+				else
+				{
+					if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText))
+					{
+						<a class="navbar-brand" asp-page="/Index">
+							<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="Logo" width="30" height="24">
+						</a>
+					}
+					else
+					{
+						if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
+						{
+							<a class="navbar-brand" asp-page="/Index">
+								@(localizedApplicationSetting.NavbarBrandText)
+							</a>
+						}
+						else
+						{
+							<a class="navbar-brand" asp-page="/Index">
+								<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="@(localizedApplicationSetting.NavbarBrandText)" width="30" height="24" class="d-inline-block align-text-top">
+								@(localizedApplicationSetting.NavbarBrandText)
+							</a>
+						}
+					}
+				}
+			}
 
 			<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
