--- a/src/Server/Pages/Features/Common/Admin/LocalizedApplicationSettings/Update.cshtml
+++ b/src/Server/Pages/Features/Common/Admin/LocalizedApplicationSettings/Update.cshtml
@@ -26,6 +26,12 @@
 
 			<hr />
 
+			<dtat-full-input asp-for="ViewModel.Copyright" />
+
+			<dtat-full-input asp-for="ViewModel.ApplicationVersioin" />
+
+			<hr />
+
 			<dtat-full-input asp-for="ViewModel.NavbarBrandText" />
 
 			<dtat-full-input asp-for="ViewModel.NavbarBrandImageUrl" dir="ltr" />
