--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
@@ -28,6 +28,10 @@
 
 			<dtat-full-input asp-for="ViewModel.Description" />
 
+			<dtat-full-input asp-for="ViewModel.ImageUrl" dir="ltr" />
+
+			<dtat-full-input asp-for="ViewModel.WideImageUrl" dir="ltr" />
+
 			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
 			<dtat-full-input asp-for="ViewModel.MaxDisplayPostCount" />
