--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Delete.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Delete.cshtml
@@ -20,19 +20,23 @@
 
 		<dtat-readonly-checkbox asp-for="ViewModel.IsActive" />
 
+		<dtat-readonly-input asp-for="ViewModel.Ordering" />
+
 		<dtat-readonly-input asp-for="ViewModel.Name" dir="ltr" />
 
 		<dtat-readonly-input asp-for="ViewModel.Title" />
 
 		<dtat-readonly-input asp-for="ViewModel.Description" />
 
-		<dtat-readonly-input asp-for="ViewModel.Ordering" />
+		<dtat-readonly-input asp-for="ViewModel.ImageUrl" />
+
+		<dtat-readonly-input asp-for="ViewModel.WideImageUrl" />
 
 		<dtat-readonly-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
-		<dtat-readonly-input asp-for="ViewModel.PostCount" />
-
 		<dtat-readonly-input asp-for="ViewModel.MaxDisplayPostCount" />
+
+		<dtat-readonly-input asp-for="ViewModel.PostCount" />
 
 		<dtat-readonly-input asp-for="ViewModel.Hits" />
 
