--- a/src/Server/Pages/Features/Common/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Common/PartialViews/_Navbar.cshtml
@@ -19,6 +19,12 @@
 		</li>
 
 		<li>
+			<a class="dropdown-item" asp-page="/Features/Common/Admin/ApplicationSettings/Update">
+				@(Resources.DataDictionary.ApplicationSetting)
+			</a>
+		</li>
+
+		<li>
 			<a class="dropdown-item" asp-page="/Features/Common/Admin/LocalizedApplicationSettings/Update">
 				@(Resources.DataDictionary.LocalizedApplicationSetting)
 			</a>
