--- a/src/Server/Pages/Features/Common/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Common/PartialViews/_Navbar.cshtml
@@ -30,6 +30,12 @@
 			</a>
 		</li>
 
+		<li>
+			<a class="dropdown-item" asp-page="/Features/Common/Admin/LocalizedMailSettings/Update">
+				@(Resources.DataDictionary.LocalizedMailSetting)
+			</a>
+		</li>
+
 	</ul>
 
 </li>
