--- a/src/Server/Pages/Features/Common/Admin/ApplicationSettings/Update.cshtml
+++ b/src/Server/Pages/Features/Common/Admin/ApplicationSettings/Update.cshtml
@@ -23,13 +23,15 @@
 
 			<partial name="PartialViews/_DisplayPageMessages" />
 
+			<dtat-full-input asp-for="ViewModel.MasterPassword" dir="ltr" />
+
 			<dtat-full-input asp-for="ViewModel.FavoriteUserProfileLevel" />
 
 			<hr />
 
-			<dtat-full-input asp-for="ViewModel.GoogleCode" dir="ltr" />
+			<dtat-full-input asp-for="ViewModel.GoogleAnalyticsCode" dir="ltr" />
 
-			<dtat-full-input asp-for="ViewModel.MasterPassword" dir="ltr" />
+			<dtat-full-input asp-for="ViewModel.GoogleTagManagerCode" dir="ltr" />
 
 			<hr />
 
