--- a/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarMain.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/Navbars/_NavbarMain.cshtml
@@ -18,99 +18,108 @@
 	var localizedApplicationSetting =
 		await
 		localizedApplicationSettingService.GetInstanceAsync();
+
+	if (isUserAuthenticated == false)
+	{
+		if (applicationSetting.IsLoginVisible == false &&
+			applicationSetting.IsRegistrationEnabled == false)
+		{
+			return;
+		}
+	}
 }
 
-<header>
+<div class="container">
+	<header>
+		<nav class="navbar navbar-expand-md bg-light border-bottom pt-0 pb-0">
 
-	<nav class="navbar navbar-expand-md bg-light border-bottom pt-0 pb-0">
+			<div class="container">
 
-		<div class="container">
-
-			@{
-				if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText) &&
-				string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
-				{
-					// که هیچی
-				}
-				else
-				{
-					if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText))
+				@{
+					if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText) &&
+					string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
 					{
-						<a class="navbar-brand" asp-page="/Index">
-							<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="Logo" width="30" height="24">
-						</a>
+						// که هیچی
 					}
 					else
 					{
-						if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
+						if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandText))
 						{
 							<a class="navbar-brand" asp-page="/Index">
-								@(localizedApplicationSetting.NavbarBrandText)
+								<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="Logo" width="30" height="24">
 							</a>
 						}
 						else
 						{
-							<a class="navbar-brand" asp-page="/Index">
-								<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="@(localizedApplicationSetting.NavbarBrandText)" width="30" height="24" class="d-inline-block align-text-top">
-								@(localizedApplicationSetting.NavbarBrandText)
-							</a>
+							if (string.IsNullOrWhiteSpace(value: localizedApplicationSetting.NavbarBrandImageUrl))
+							{
+								<a class="navbar-brand" asp-page="/Index">
+									@(localizedApplicationSetting.NavbarBrandText)
+								</a>
+							}
+							else
+							{
+								<a class="navbar-brand" asp-page="/Index">
+									<img src="@(localizedApplicationSetting.NavbarBrandImageUrl)" alt="@(localizedApplicationSetting.NavbarBrandText)" width="30" height="24" class="d-inline-block align-text-top">
+									@(localizedApplicationSetting.NavbarBrandText)
+								</a>
+							}
 						}
 					}
 				}
-			}
 
-			<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+				<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-			<div class="collapse navbar-collapse" id="navbarMain">
+				<div class="collapse navbar-collapse" id="navbarMain">
 
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-					@if (isUserAuthenticated)
-					{
-						<li class="nav-item">
-							<a class="nav-link" asp-page="/Account/Profile">
-								[@(User!.Identity!.Name)]
-								@*[@(User.Identity.Name)]*@
-							</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link" asp-page="/Account/Logout">
-								@(Resources.PageTitles.Logout)
-							</a>
-						</li>
-					}
-					else
-					{
-						@if (applicationSetting.IsRegistrationEnabled)
+						@if (isUserAuthenticated)
 						{
 							<li class="nav-item">
-								<a class="nav-link" asp-page="/Account/Register">
-									@(Resources.PageTitles.Register)
+								<a class="nav-link" asp-page="/Account/Profile">
+									[@(User!.Identity!.Name)]
+								</a>
+							</li>
+
+							<li class="nav-item">
+								<a class="nav-link" asp-page="/Account/Logout">
+									@(Resources.PageTitles.Logout)
 								</a>
 							</li>
 						}
-
-						@if (applicationSetting.IsLoginVisible)
+						else
 						{
-							<li class="nav-item">
-								<a class="nav-link" asp-page="/Account/Login">
-									@(Resources.PageTitles.Login)
-								</a>
-							</li>
+							@if (applicationSetting.IsRegistrationEnabled)
+							{
+								<li class="nav-item">
+									<a class="nav-link" asp-page="/Account/Register">
+										@(Resources.PageTitles.Register)
+									</a>
+								</li>
+							}
+
+							@if (applicationSetting.IsLoginVisible)
+							{
+								<li class="nav-item">
+									<a class="nav-link" asp-page="/Account/Login">
+										@(Resources.PageTitles.Login)
+									</a>
+								</li>
+							}
 						}
-					}
 
-				</ul>
+					</ul>
 
-				<partial name="PartialViews/Navbars/_NavbarCulture" />
+					<partial name="PartialViews/Navbars/_NavbarCulture" />
+
+				</div>
 
 			</div>
 
-		</div>
+		</nav>
 
-	</nav>
-
-</header>
+	</header>
+</div>
