--- a/src/Server/Pages/Shared/PartialViews/_Seo.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/_Seo.cshtml
@@ -5,8 +5,46 @@
 		await
 		applicationSettingService.GetInstanceAsync();
 
-	var googleCode =
-		applicationSetting.GoogleCode;
+	var googleAnalyticsCode =
+		applicationSetting.GoogleAnalyticsCode;
+
+	var googleTagManagerCode =
+		applicationSetting.GoogleTagManagerCode;
+}
+
+@if (string.IsNullOrWhiteSpace(value: googleAnalyticsCode) == false)
+{
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=@(googleAnalyticsCode)"></script>
+
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', '@(googleAnalyticsCode)');
+	</script>
+}
+
+@if (string.IsNullOrWhiteSpace(value: googleTagManagerCode) == false)
+{
+	<!-- Google Tag Manager -->
+	<script>
+		(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', '@(googleTagManagerCode)');</script>
+	<!-- End Google Tag Manager -->
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=@(googleTagManagerCode)" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+	</noscript>
+	<!-- End Google Tag Manager (noscript) -->
 }
 
 <title>
@@ -35,18 +73,4 @@
 	{
 		<meta name="author" content="Dariush Tasdighi - داریوش تصدیقی" />
 	}
-}
-
-@if (string.IsNullOrWhiteSpace(value: googleCode) == false)
-{
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=@(googleCode)"></script>
-
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', '@(googleCode)');
-	</script>
 }
